# Clipper

./: .gitignore  README.md  clipper.filtergraph  cmakelists.txt
.github/workflows/: windows-build.yml
Clipper/: CMakeLists.txt  Clipper.h  CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor 2.cpp  PluginProcessor.cpp  PluginProcessor.h
